// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Size /> components composition should apply all specified props to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 lmgfZC"
  />
</div>
`;

exports[`<Size /> components composition should render child component with no sizings applied 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 dyblWC"
  />
</div>
`;
